# redcopy

./: .gitignore  README.md  pyproject.toml  requirements.txt
redcopy/: core.py
redcopy/utils/: data_io.py  get_ddl.py
