[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 40.9.0",
    "wheel",
]

[project]
name = "redcopy"
version = "0.0.1"
description = "A simple Python library for easily making a copy of a Redshift Database."
authors = [
    { name = "Adam Best", email = "besta2010@gmail.com" },
]
maintainers = [
    { name = "Adam Best", email = "besta2010@gmail.com" },
]
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["redshift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { repository = "https://github.com/adam133/redcopy" }

[tool.maturin]
bindings = "bin"
python-source = "python"
strip = true

[tool.setuptools]
license-files = [
    "LICENSE",
    "licenses/*",
]